TINY-14264: fix selected link color in dark mode

--- a/modules/oxide/src/less/skins/content/dark/content.less
+++ b/modules/oxide/src/less/skins/content/dark/content.less
@@ -14,6 +14,10 @@ a {
   color: #4099ff;
 }
 
+a[data-mce-selected="inline-boundary"] {
+  color: #fff;
+}
+
 table {
   border-collapse: collapse;
 }
